# Tasks_for_worker

./: .gitignore  README.md  pyproject.toml  requirement.txt
data/: data.json
src/: task.py  user.py  utils.py
tests/: conftest.py  test_task.py  test_user.py  test_utils.py
