[tool.poetry]
name = "example-home-work"
version = "0.1.0"
description = ""
authors = ["ilia akatov <ilia-akatoff@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
